--- a/wp-content/themes/curriculum/assets/css/custom.css
+++ b/wp-content/themes/curriculum/assets/css/custom.css
@@ -244,6 +244,15 @@
   padding-right: .5rem;
 }
 
+.thumb{
+  max-height:100%;
+  max-width:100%;
+}
+
+.thumb:hover{
+  cursor: pointer;
+}
+
 .grid-icons-wp ul li img{
   padding-left: -1px;
   max-width: 4rem;
